--- a/.github/workflows/cargo.yml
+++ b/.github/workflows/cargo.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Build
-      run: cargo build --verbose
+    # - name: Build
+    #   run: cargo build --verbose
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test --verbose -- test-threads=1
